test first version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
       "skipLibCheck": true,
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
+      "allowImportingTsExtensions": true,
       "strict": true,
       "module": "esnext",
       "moduleResolution": "bundler",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "noEmit": false
+      "noEmit": true
     },
     "include": ["src"],
     "exclude": ["node_modules"]
